maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:22: error: identifier expected but '(' found.
  def marquerCasesAdjacentes((x,y):Double) {
                             ^JediEscaper:95: error: ':' expected but '}' found.
  } 
  ^